# NexusGPT

./: README.md  app.py  dummy_test_doc.txt  main.py  pyproject.toml  requirements.txt
agents/: agent.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/agents/: agent.py
backend/chroma_db/: chroma.sqlite3
backend/data/: chatbot_memory.db  langgraph_checkpoints.sqlite-shm  langgraph_checkpoints.sqlite-wal
backend/tools/: tools.py
chroma_db/: chroma.sqlite3
data/: chatbot_memory.db  langgraph_checkpoints.sqlite  langgraph_checkpoints.sqlite-shm  langgraph_checkpoints.sqlite-wal
database/: database.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatArea.jsx  MessageItem.jsx  ModelSelector.jsx  Sidebar.jsx
frontend/src/utils/: api.js
rag/: rag.py
tools/: tools.py
