[project]
name = "nexusgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.8",
    "sqlalchemy>=2.0.51",
    "tavily-python>=0.7.26",
]
