[project]
name = "nexusgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "docx2txt>=0.9",
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "numexpr>=2.14.1",
    "pypdf>=6.14.2",
    "sqlalchemy>=2.0.51",
    "tavily-python>=0.7.26",
]
